# athena_new

./: .gitignore  CMakeLists.txt
3rd/sol2/include/sol/compatibility/: compat-5.3.c.h
client/: CMakeLists.txt
client/src/: main.cpp
client/src/network/: ClientNetWorkHandler.cpp  ClientNetWorkHandler.h  MsgHandler.cpp  MsgHandler.h  PlayerLoginHandler.cpp  PlayerLoginHandler.h
client/src/objs/: Player.cpp
engine/: CMakeLists.txt
engine-lua/: CMakeLists.txt  Lua_NetServer.cpp  main.cpp  pb.c  pb.h
engine-lua/lib/: CMakeLists.txt  Lua_Base.cpp  Lua_Common.cpp  Lua_Mysql.cpp  Lua_Redis.cpp
engine-lua/script/: redis.lua  server.lua
engine/common/: BaseType.h  ByteBuffer.cpp  ByteBuffer.h  ByteConverter.h  CsvParser.cpp  CsvParser.h  Define.h  Dispatcher.cpp  Dispatcher.hpp  Disrupter.hpp  ObjectPool.hpp  Platform.h  RingBuffer.hpp  RingByteBuf.cpp  RingByteBuf.h  Singleton.h  TQueue.h  ThreadPool.cpp  ThreadPool.h  Tools.cpp  XFile.cpp  XLog.cpp  XLog.h  XTime.cpp
engine/db/: DBResult.h  DBThreadPool.cpp  DBThreadPool.h  DB_Interface.h  DB_Interface_mysql.cpp  DB_Interface_mysql.h  DB_Interface_redis.cpp  DB_Interface_redis.h  Dal.cpp  Dal.hpp  MysqlResult.h  RedisCommand.cpp  RedisResult.cpp  RedisResult.h  SqlPrepare.cpp  SqlResultSet.cpp  SqlResultSet.h
engine/network/: Dispatcher.cpp  Dispatcher.h
engine/serialization/: Event.h  Keyword.h  Token.cpp  main.cpp  test.cpp
engine/transport/: AthenaTcpServer.cpp  AthenaTcpServer.h  ByteUtils.cpp  ByteUtils.h  Channel.cpp  Channel.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  EventDefs.h  EventLoop.cpp  EventLoop.h  EventTrigger.cpp  EventTrigger.h  IdleStateHandler.cpp  IdleStateHandler.h  NetInterface.h  TcpClient.cpp  TcpClient.h
engine/utils/: BuffReader.h  BuffWriter.h  JsonReader.cpp  JsonReader.h  ParseUrl.cpp  endian_utils.h  pmath.h
game/: CMakeLists.txt
game/progen/: ProtoCommon.pb.cc  ProtoCommon.pb.h  ProtoInner.pb.cc  ProtoInner.pb.h  ProtoTask.pb.cc  ProtoTask.pb.h
game/proto/: ProtoInner.proto  gen.sh
game/script/: testAdd.lua
game/src/: main.cpp
game/src/controller/: PlayerLoginHandler.h  PlayerLoiginHandler.cpp
game/src/luatest/: main_lua.cpp
game/src/network/: GameServerNetWorkHandler.cpp  GameServerNetWorkHandler.h  InnerNetWorkHandler.cpp  InnerNetWorkHandler.h  InnerServerNetWorkHandler.cpp  InnerServerNetWorkHandler.h  MsgHandler.cpp  MsgHandler.h  NetWorkHandler.cpp  NetWorkHandler.h  SystemMsgHandler.cpp  SystemMsgHandler.h
game/src/objs/: GameRole.h  Player.cpp  Player.h
game/src/service/: PlayerMgr.cpp  PlayerMgr.h
game/src/thread/: AthenaThreadPool.h
gateway/: CMakeLists.txt
gateway/progen/: ProtoCommon.pb.h  ProtoInner.pb.cc  ProtoInner.pb.h  ProtoMsgId.pb.cc  ProtoMsgId.pb.h  ProtoTask.pb.cc
gateway/proto/: ProtoInner.proto  protoc
gateway/src/: main.cpp
gateway/src/controller/: PlayerLoginHandler.cpp  PlayerLoginHandler.h
gateway/src/network/: GateClientNetWorkHandler.cpp  GateClientNetWorkHandler.h  GatewayServerNetWorkHandler.cpp  GatewayServerNetWorkHandler.h  InnerClientNetWorkHandler.cpp  InnerClientNetWorkHandler.h  InnerNetWorkHandler.cpp  MsgHandler.cpp  MsgHandler.h  PlayerNetWorkHandller.cpp  PlayerNetWorkHandller.h  ServerNetWorkHandler.cpp  ServerNetWorkHandler.h  SystemMsgHandler.cpp
gateway/src/objs/: Player.h
gateway/src/thread/: AthenaThreadPool.cpp
proto/: ProtoMsgId.proto  gen.sh
